fix text descriptions and set overflow visible for carousel from tab in front

--- a/src/app/components/Carousel/Carousel.scss
+++ b/src/app/components/Carousel/Carousel.scss
@@ -1,1 +1,7 @@
 @import "../../assets/scss/main.scss";
+
+@include bp-tab{
+    .alice-carousel__wrapper{
+        overflow: visible !important;
+    }
+}
