--- a/src/app/components/ProjectCard/ProjectCard.scss
+++ b/src/app/components/ProjectCard/ProjectCard.scss
@@ -1,45 +1,68 @@
 @import "../../assets/scss/main.scss";
-.pc{
+.pc {
+  width: 100%;
+  border-radius: 2rem;
+  max-width: 50rem;
+  &-container {
     width: 100%;
-    border-radius: 2rem;
-    max-width: 50rem;
-    &-container{
-        width: 100%;
-        height: 100%;
-    }
-    &-img{
-        width: 100%;
-        height: 100%;
-        border-radius: 1rem;
+    height: 100%;
+  }
+  &-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem;
 
-        & img{
-            width: 100%;
-            height: 30rem;
-            object-fit: cover;
-            border-radius: 1rem;
-        }
+    & img {
+      width: 100%;
+      height: 30rem;
+      object-fit: cover;
+      border-radius: 1rem;
     }
-    &-text{
-        text-align: center;
-        display: grid;
-        place-items: center;
-        padding: 2rem;
-    }
+  }
+  &-text {
+    text-align: center;
+    display: grid;
+    place-items: center;
+    padding: 2rem;
+    height: 18rem;
 
-    &-actions{
-        border-radius: 0 0 2rem 2rem;
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        padding-bottom: 4rem;
-        & button{
-            width: 7rem;
-            color: white;
-            font-size: 1.3rem;
-            margin: 0 .5rem;
-        }
-        & svg{
-            font-size: 3rem;
-        }
+    & p {
+      line-height: 3rem;
     }
+  }
+
+  &-actions {
+    border-radius: 0 0 2rem 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-bottom: 4rem;
+    & button {
+      width: 7rem;
+      color: white;
+      font-size: 1.3rem;
+      margin: 0 0.5rem;
+    }
+    & svg {
+      font-size: 3rem;
+    }
+  }
+}
+
+@include bp-tab {
+    .alice-carousel {
+    transform: translateX(-8rem);
+    margin-top: 7rem;
+  }
+  .__active {
+    transform: scale(1.2);
+    margin: 0 8rem !important;
+  }
+  .alice-carousel__dots {
+    display: none;
+  }
+  .alice-carousel__prev-btn, .alice-carousel__next-btn{
+    display: none;
+  }
+
 }
